--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,19 @@
     <version>1.0-SNAPSHOT</version>
      <packaging>war</packaging>
     <dependencies>
+        <!--单元测试组件jar-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <!-- 表示开发的时候引入，发布的时候不会加载此包 -->
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>4.3.4.RELEASE</version>
+        </dependency>
         <!--  jdbc jar-->
         <dependency>
             <groupId>mysql</groupId>
